--- a/Javascript-Decorators/package.json
+++ b/Javascript-Decorators/package.json
@@ -9,10 +9,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ivan Mushketyk",
+  "type": "module",
   "license": "",
   "devDependencies": {
     "@babel/cli": "^7.23.9",
     "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-decorators": "^7.23.9"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
   }
 }
